math-core/src/snapshots/math_core__parser__tests__integral_with_reversed_limits.snap
---
source: math-core/src/parser.rs
expression: "\\int\\limits^1_0 dx"
---
[
  UnderOver(
    target: Operator(
      op: '∫',
      attr: None,
      left: Some(Zero),
      right: None,
    ),
    under: Number("0"),
    over: Number("1"),
  ),
  IdentifierChar('d', Default),
  IdentifierChar('x', Default),
]
