math-core/src/snapshots/math_core__parser__tests__mathit_func.snap
---
source: math-core/src/parser.rs
expression: "\\mathit{ab \\log cd}"
---
[
  Row(
    nodes: [
      IdentifierStr(true, "𝑎𝑏"),
      PseudoOp(
        attr: None,
        left: Some(ThreeMu),
        right: Some(ThreeMu),
        name: "log",
      ),
      IdentifierStr(true, "𝑐𝑑"),
    ],
    attr: None,
  ),
]
