math-core/src/snapshots/math_core__parser__tests__mathit_greek.snap
---
source: math-core/src/parser.rs
expression: "\\mathit{\\Alpha\\Beta}"
---
[
  IdentifierStr(true, "𝛢𝛣"),
]
