math-core/src/snapshots/math_core__parser__tests__mathit_mathrm_nested.snap
---
source: math-core/src/parser.rs
expression: "\\mathit{\\mathrm{a}b}"
---
[
  Row(
    nodes: [
      IdentifierChar('a', ForcedUpright),
      IdentifierChar('𝑏', Default),
    ],
    attr: None,
  ),
]
