math-core/src/snapshots/math_core__parser__tests__mathit_of_max.snap
---
source: math-core/src/parser.rs
expression: "\\mathit{ab \\max \\alpha\\beta}"
---
[
  Row(
    nodes: [
      IdentifierStr(true, "𝑎𝑏"),
      PseudoOp(
        attr: None,
        left: Some(ThreeMu),
        right: Some(ThreeMu),
        name: "max",
      ),
      IdentifierStr(true, "𝛼𝛽"),
    ],
    attr: None,
  ),
]
