math-core/src/snapshots/math_core__parser__tests__mathrm_mathit_nested.snap
---
source: math-core/src/parser.rs
expression: "\\mathrm{\\mathit{a}b}"
---
[
  Row(
    nodes: [
      IdentifierChar('𝑎', Default),
      IdentifierChar('b', ForcedUpright),
    ],
    attr: None,
  ),
]
