math-core/src/snapshots/math_core__parser__tests__mathrm_mathit_nested_multi.snap
---
source: math-core/src/parser.rs
expression: "\\mathrm{ab\\mathit{cd}ef}"
---
[
  Row(
    nodes: [
      IdentifierStr(false, "ab"),
      IdentifierStr(true, "𝑐𝑑"),
      IdentifierStr(false, "ef"),
    ],
    attr: None,
  ),
]
