math-core/src/snapshots/math_core__parser__tests__mathrm_sqrt.snap
---
source: math-core/src/parser.rs
expression: "\\mathrm{\\sqrt xy}"
---
[
  Row(
    nodes: [
      Sqrt(IdentifierChar('x', ForcedUpright)),
      IdentifierChar('y', ForcedUpright),
    ],
    attr: None,
  ),
]
