math-core/src/snapshots/math_core__parser__tests__mathrm_subscript.snap
---
source: math-core/src/parser.rs
expression: "\\mathrm{x_x y_y}"
---
[
  Row(
    nodes: [
      Subscript(
        target: IdentifierChar('x', ForcedUpright),
        symbol: IdentifierChar('x', ForcedUpright),
      ),
      Subscript(
        target: IdentifierChar('y', ForcedUpright),
        symbol: IdentifierChar('y', ForcedUpright),
      ),
    ],
    attr: None,
  ),
]
