math-core/src/snapshots/math_core__parser__tests__number_after_circumflex.snap
---
source: math-core/src/parser.rs
expression: x^12
---
[
  Superscript(
    target: IdentifierChar('x', Default),
    symbol: Number("1"),
  ),
  Number("2"),
]
